--- a/index.html
+++ b/index.html
@@ -5,12 +5,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Harlech Castle information and history">
+    <meta name="keywords" content="Harlech Castle, castle, fun facts, history, gallery">
     <link rel="stylesheet" href="/assets/css/style.css">
     <title>Harlech Castle</title>
 </head>
 
 <body>
-<h1>this ia a test</h1>
+
+<section>
+    Harlech Castle
+</section>
+
+<section id="hero">
+</section>
+
+<section>
+    brief summary
+</section>
+
+<footer>
+
+</footer>
+
+
 </body>
 
 </html>
