--- a/index.html
+++ b/index.html
@@ -13,9 +13,19 @@
 
 <body>
 
-<section>
-    Harlech Castle
-</section>
+    <header>
+        <a href="index.html">
+            <h1>Harlech Castle</h1>
+        </a>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="history.html">History</a></li>
+                <li><a href="gallery.html">Gallery</a></li>
+                <li><a href="fun-facts.html">Fun Facts</a></li>
+            </ul>
+        </nav>
+    </header>
 
 <section id="hero">
 </section>
@@ -27,7 +37,6 @@
 <footer>
 
 </footer>
-
 
 </body>
 
