style nav bar and align header with nav bar

--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
 
     <header>
         <a href="index.html">
-            <h1>Harlech Castle</h1>
+            <h1 id="logo">Harlech Castle</h1>
         </a>
         <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="history.html">History</a></li>
-                <li><a href="gallery.html">Gallery</a></li>
+            <ul id="menu">
                 <li><a href="fun-facts.html">Fun Facts</a></li>
+                <li><a href="gallery.html">Gallery</a></li>
+                <li><a href="history.html">History</a></li>
+                <li><a href="index.html">Home</a></li>
             </ul>
         </nav>
     </header>
