add cover style and text for hero image. add style for h2 and h3 element

--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
 
 <section id="hero-outer">
     <div id="hero"></div>
+    <div id="cover-text">
+        <h2>Harlech Castle</h2>
+        <h3>A Must See Historical Adventure, Fun for all ages!! </h3>
+    </div>
 </section>
 
 <section>
