add div for summary text and h2,p elements

--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
         <h2>Harlech Castle</h2>
         <h3>A Must See Historical Adventure, Fun for all ages!! </h3>
     </div>
+    <div id="summary-text">
+        <h2>Brief Summary</h2>
+        <p></p>
+    </div>
 </section>
 
 <section>
