add brief summary via cover text on hero image

--- a/index.html
+++ b/index.html
@@ -35,14 +35,13 @@
     </div>
     <div id="summary-text">
         <h2>Brief Summary</h2>
-        <p></p>
+        <p>Harlech Castle or "Castell Harlech" as it's pronounced in Welsh is situated at the top of a town named Harlech. 
+            It is located in a county named Gwynedd, in north Wales. The castle was built between the years 1282 and 1289 at the cost of £8,190 at the time. 
+            When ajusted for inflation that number is roughly £13,109,797.44 in todays money.
+            The building has remained standing throughout the centuries despite being involved in several wars.
+            Today the building is open to tourists. The money made from tourism helps to keep the castle well maintained, and also brings in money for the local community.</p>
     </div>
 </section>
-
-<section>
-    brief summary
-</section>
-
 <footer>
 
 </footer>
