add footer and footer external links

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Harlech Castle information and history">
     <meta name="keywords" content="Harlech Castle, castle, fun facts, history, gallery">
+    <script src="https://kit.fontawesome.com/fb3ce16b7a.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/assets/css/style.css">
     <title>Harlech Castle</title>
 </head>
@@ -27,25 +28,33 @@
         </nav>
     </header>
 
-<section id="hero-outer">
-    <div id="hero"></div>
-    <div id="cover-text">
-        <h2>Harlech Castle</h2>
-        <h3>A Must See Historical Adventure, Fun for all ages!! </h3>
-    </div>
-    <div id="summary-text">
-        <h2>Brief Summary</h2>
-        <p>Harlech Castle or "Castell Harlech" as it's pronounced in Welsh is situated at the top of a town named Harlech. 
-            It is located in a county named Gwynedd, in north Wales. The castle was built between the years 1282 and 1289 at the cost of £8,190 at the time. 
-            When ajusted for inflation that number is roughly £13,109,797.44 in todays money.
-            The building has remained standing throughout the centuries despite being involved in several wars.
-            Today the building is open to tourists. The money made from tourism helps to keep the castle well maintained, and also brings in money for the local community.</p>
-    </div>
-</section>
-<footer>
+    <section id="hero-outer">
+        <div id="hero"></div>
+        <div id="cover-text">
+            <h2>Harlech Castle</h2>
+            <h3>A Must See Historical Adventure, Fun for all ages!! </h3>
+        </div>
+        <div id="summary-text">
+            <h2>Brief Summary</h2>
+            <p>Harlech Castle or "Castell Harlech" as it's pronounced in Wales, is situated at the top of a town named
+                Harlech.
+                Harlech is located in a county named Gwynedd, in north Wales. The castle was built between the years
+                1282 and 1289 at the cost of £8,190 at the time.
+                When ajusted for inflation that number is roughly £13,109,797.44 in todays money.
+                The building has remained standing throughout the centuries despite being involved in several wars.
+                Today the building is open to tourists. The money made from tourism helps to keep the castle well
+                maintained, and also brings in money for the local community.</p>
+        </div>
+    </section>
 
-</footer>
-
+    <footer class="footer">
+        <div class="footer-notes">
+        <a href="https://www.facebook.com/HarlechCastle/" target="_blank"><i class="fab fa-facebook"></i></a>
+        <a href="https://www.instagram.com/explore/locations/273710296114972/castell-harlech-harlech-castle/" target="_blank"><i class="fab fa-instagram"></i></a>
+        <a href="https://twitter.com/harlech_castle" target="_blank"><i class="fab fa-twitter"></i></a>
+        <a href="https://www.visitwales.com/attraction/castle/harlech-castle-cadw-1834662" target="_blank"><i class="fas fa-info-circle"></i> </a>
+    </div>
+    </footer>
 </body>
 
 </html>
