--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
         </a>
         <nav>
             <ul id="menu">
-                <li><a href="fun-facts.html" class="active">Fun Facts</a></li>
-                <li><a href="gallery.html" class="active">Gallery</a></li>
-                <li><a href="history.html" class="active">History</a></li>
+                <li><a href="fun-facts.html">Fun Facts</a></li>
+                <li><a href="gallery.html">Gallery</a></li>
+                <li><a href="history.html">History</a></li>
                 <li><a href="index.html" class="active">Home</a></li>
             </ul>
         </nav>
