add pictures to gallery, no style

--- a/gallery.html
+++ b/gallery.html
@@ -24,7 +24,16 @@
     </nav>
 </header>
 
-
+<div class="container">
+    <div class="gallery">
+        <img src="/assets/images/exterior-1.jpg" alt="Castle exterior, mountain view">
+        <img src="/assets/images/exterior-2.jpg" alt="Castle exterior, sunny day">
+        <img src="/assets/images/exterior-3.jpg" alt="Castle exterior, sunny day, some clouds">
+        <img src="/assets/images/exterior-4.jpg" alt="Castle exterior, dull, overcast">
+        <img src="/assets/images/exterior-5.jpg" alt="Castle exterior, front entrance">
+        <img src="/assets/images/exterior 6.jpg" alt="Castle exterior, wide front view">
+    </div>
+</div>
 
 <footer class="footer">
     <div class="footer-notes">
