add gallery style

--- a/gallery.html
+++ b/gallery.html
@@ -17,7 +17,7 @@
     <nav>
         <ul id="menu">
             <li><a href="fun-facts.html">Fun Facts</a></li>
-            <li><a href="gallery.html" class="gallery">Gallery</a></li>
+            <li><a href="gallery.html" class="active">Gallery</a></li>
             <li><a href="history.html">History</a></li>
             <li><a href="index.html" >Home</a></li>
         </ul>
@@ -27,11 +27,29 @@
 <div class="container">
     <div class="gallery">
         <img src="/assets/images/exterior-1.jpg" alt="Castle exterior, mountain view">
+        <div class="desc"> Castle rear, taken from hill bellow</div>
+
         <img src="/assets/images/exterior-2.jpg" alt="Castle exterior, sunny day">
+        <div class="desc">Castle front, taken from mountain above </div>
+
         <img src="/assets/images/exterior-3.jpg" alt="Castle exterior, sunny day, some clouds">
+        <div class="desc">Castle front, taken from higher up mountain </div>
+
         <img src="/assets/images/exterior-4.jpg" alt="Castle exterior, dull, overcast">
+        <div class="desc">Close up side view</div>
+
         <img src="/assets/images/exterior-5.jpg" alt="Castle exterior, front entrance">
+        <div class="desc">Castle entrance</div>
+
         <img src="/assets/images/exterior 6.jpg" alt="Castle exterior, wide front view">
+        <div class="desc">Wide shot of castle front</div>
+    </div>
+</div>
+
+<div class="container-right">
+    <div class="gallery-right">
+        <img src="/assets/images/interior-1.jpg" alt="interior arches">
+        <div class="desc-right">Castle enrtance archway</div>
     </div>
 </div>
 
