add more images, finish gallery. add map to homepage. add info to homepage

--- a/gallery.html
+++ b/gallery.html
@@ -24,8 +24,7 @@
     </nav>
 </header>
 
-<div class="container">
-    <div class="gallery">
+<div id="photos">
         <img src="/assets/images/exterior-1.jpg" alt="Castle exterior, mountain view">
         <div class="desc"> Castle rear, taken from hill bellow</div>
 
@@ -38,20 +37,24 @@
         <img src="/assets/images/exterior-4.jpg" alt="Castle exterior, dull, overcast">
         <div class="desc">Close up side view</div>
 
+        <img src="/assets/images/exterior 6.jpg" alt="Castle exterior, wide front view">
+        <div class="desc">Wide shot of castle front</div>
+
         <img src="/assets/images/exterior-5.jpg" alt="Castle exterior, front entrance">
         <div class="desc">Castle entrance</div>
 
-        <img src="/assets/images/exterior 6.jpg" alt="Castle exterior, wide front view">
-        <div class="desc">Wide shot of castle front</div>
-    </div>
-</div>
-
-<div class="container-right">
-    <div class="gallery-right">
         <img src="/assets/images/interior-1.jpg" alt="interior arches">
-        <div class="desc-right">Castle enrtance archway</div>
+        <div class="desc">Castle enrtance archway</div>
+
+        <img src="/assets/images/interior-2.jpg" alt="interior overlooking courtyard">
+        <div class="desc">Overlooking the courtyard inside the castle</div>
+
+        <img src="/assets/images/interior-3.jpg" alt="interior looking at entrance">
+        <div class="desc">View from inside at front entrance</div>
+
     </div>
-</div>
+
+       
 
 <footer class="footer">
     <div class="footer-notes">
