--- a/index.html
+++ b/index.html
@@ -46,6 +46,26 @@
                 maintained, and also brings in money for the local community.</p>
         </div>
     </section>
+    
+    <section id="info">
+    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d9635.645506689869!2d-4.1089014!3d52.8599986!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xd57712cb9225529d!2sHarlech%20Castle!5e0!3m2!1ssv!2sse!4v1622486031522!5m2!1ssv!2sse" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+    <p>Opening Hours 2016 - 2017
+    Last admission half an hour before closing.
+    Normal Admissions:-
+    1st March to 30th June - 09.30 - 17.00 daily
+    1st July - 31st  August - 09.30 - 18.00 daily
+    1st September - 31st October - 09.30 - 17.00 daily
+    1st November to 28th February 10.00 - 16.00  Monday to Saturday - 11.00 - 16.00 Sunday
+    Closed 24th, 25th, 26th December, 1st January.
+        
+        Contact and Admission Information
+        Telephone:- +44 1766 780552
+        Admission Charge:- Adults £6.00, Reduced rate £4.20.
+        Family Ticket:- £16.20 - admits 2 adults and up to 3 children under 16 years.
+        Children under 16 must be accompanied by an adult. Children under 5 free. No dogs allowed.
+        Three or seven day explorer passes are available to give you free admission to the historic sites in the care of Cadw.</p>
+
+    </section>
 
     <footer class="footer">
         <div class="footer-notes">
