--- a/history.html
+++ b/history.html
@@ -28,6 +28,9 @@
         </nav>
     </header>
    
+    <section id="early-days">
+        <h3>Early Days:</h3>
+    </section>
     
     <footer class="footer">
         <div class="footer-notes">
