change font family. change box sizings for hero text

--- a/history.html
+++ b/history.html
@@ -28,8 +28,11 @@
         </nav>
     </header>
    
-    <section id="early-days">
-        <h3>Early Days:</h3>
+    <section>
+        <h2>The History Of Harlech Castle</h2>
+        <div id="">left</div>
+        <div>right</div>
+        <div>center</div>
     </section>
     
     <footer class="footer">
