add my goal base for readme.md

--- a/history.html
+++ b/history.html
@@ -30,9 +30,9 @@
    
     <section>
         <h2>The History Of Harlech Castle</h2>
-        <div id="">left</div>
-        <div>right</div>
-        <div>center</div>
+        <div id="history-left">left</div>
+        <div id="history-right">right</div>
+        <div id="history-center">center</div>
     </section>
     
     <footer class="footer">
