add fun-fact content to page

--- a/fun-facts.html
+++ b/fun-facts.html
@@ -28,22 +28,23 @@
         </nav>
     </header>
 
-    <section id="hero-outer">
-        <div id="hero"></div>
-        <div id="cover-text">
-            <h2>Harlech Castle</h2>
-            <h3>A Must See Historical Adventure, Fun for all ages!! </h3>
-        </div>
-        <div id="summary-text">
-            <h2>Brief Summary</h2>
-            <p>Harlech Castle or "Castell Harlech" as it's pronounced in Wales, is situated at the top of a town named
-                Harlech.
-                Harlech is located in a county named Gwynedd, in north Wales. The castle was built between the years
-                1282 and 1289 at the cost of £8,190 at the time.
-                When ajusted for inflation that number is roughly £13,109,797.44 in todays money.
-                The building has remained standing throughout the centuries despite being involved in several wars.
-                Today the building is open to tourists. The money made from tourism helps to keep the castle well
-                maintained, and also brings in money for the local community.</p>
+    <section>
+        <ul id="facts">
+            <li>The Castle originally overlooked the sea</li><br>
+            <li>The sea has since resided and a town lies bellow the Castle</li><br>
+            <li>The Castle is protected by four round towers aswell as a gatehouse</li><br>
+            <li>Harlech castle is surrounded by a clif on two sides, making assault very difficult</li><br>
+            <li>Harlech Castle's primary use was to help keep English control over Wales</li><br>
+            <li>The Castle walls are around twelve metres in height</li><br>
+            <li>The Castle once help up against a seige that lasted seven years during the 15th century</li><br>
+            <li>The population or Harlech today is roughly 1,450</li><br>
+            <li>Most people who live in Harlech come from a long family line of people who lived in harlech</li><br>
+            <li>One of the more creepy facts of Harlech, It is home to a graveyard from the 1800s</li><br>
+
+        </ul>
+
+        <div id="tour">
+            <img src="/assets/images/Harlech-map-1.png" alt="Harlech tour guide">
         </div>
     </section>
 
