add video to fun fact section

--- a/fun-facts.html
+++ b/fun-facts.html
@@ -48,6 +48,9 @@
         </div>
     </section>
 
+    <iframe id="video" width="640" height="360" src="https://www.youtube.com/embed/2ETNJXog9Fc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <p>This video is courtesy of Fly & Wild Camp North Wales </p>
+
     <footer class="footer">
         <div class="footer-notes">
         <a href="https://www.facebook.com/HarlechCastle/" target="_blank"><i class="fab fa-facebook"></i></a>
