fix error on image6

--- a/gallery.html
+++ b/gallery.html
@@ -1,3 +1,7 @@
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -37,7 +41,7 @@
         <img src="/assets/images/exterior-4.jpg" alt="Castle exterior, dull, overcast">
         <div class="desc">Close up side view</div>
 
-        <img src="/assets/images/exterior 6.jpg" alt="Castle exterior, wide front view">
+        <img src="/assets/images/exterior-6.jpg" alt="Castle exterior, wide front view">
         <div class="desc">Wide shot of castle front</div>
 
         <img src="/assets/images/exterior-5.jpg" alt="Castle exterior, front entrance">
