--- a/fun-facts.html
+++ b/fun-facts.html
@@ -30,16 +30,17 @@
 
     <section>
         <ul id="facts">
-            <li>The Castle originally overlooked the sea</li><br>
-            <li>The sea has since resided and a town lies bellow the Castle</li><br>
-            <li>The Castle is protected by four round towers aswell as a gatehouse</li><br>
-            <li>Harlech castle is surrounded by a clif on two sides, making assault very difficult</li><br>
-            <li>Harlech Castle's primary use was to help keep English control over Wales</li><br>
-            <li>The Castle walls are around twelve metres in height</li><br>
-            <li>The Castle once help up against a seige that lasted seven years during the 15th century</li><br>
-            <li>The population or Harlech today is roughly 1,450</li><br>
-            <li>Most people who live in Harlech come from a long family line of people who lived in harlech</li><br>
-            <li>One of the more creepy facts of Harlech, It is home to a graveyard from the 1800s</li><br>
+            <h2>Quickfire Facts!!</h2><br>
+            <li>The Castle originally overlooked the sea</li>
+            <li>The sea has since resided and a town lies bellow the Castle</li>
+            <li>The Castle is protected by four round towers aswell as a gatehouse</li>
+            <li>Harlech castle is surrounded by a clif on two sides, making assault very difficult</li>
+            <li>Harlech Castle's primary use was to help keep English control over Wales</li>
+            <li>The Castle walls are around twelve metres in height</li>
+            <li>The Castle once help up against a seige that lasted seven years during the 15th century</li>
+            <li>The population or Harlech today is roughly 1,450</li>
+            <li>Most people who live in Harlech come from a long family line of people who lived in harlech</li>
+            <li>One of the more creepy facts of Harlech, It is home to a graveyard from the 1800s</li>
 
         </ul>
 
@@ -48,8 +49,8 @@
         </div>
     </section>
 
-    <iframe id="video" width="640" height="360" src="https://www.youtube.com/embed/2ETNJXog9Fc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    <p>This video is courtesy of Fly & Wild Camp North Wales </p>
+    <iframe id="video" width="640" height="360" src="https://www.youtube.com/embed/2ETNJXog9Fc" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <p class="source-v">This video is courtesy of Fly & Wild Camp North Wales </p>
 
     <footer class="footer">
         <div class="footer-notes">
