--- a/fun-facts.html
+++ b/fun-facts.html
@@ -16,7 +16,7 @@
 
     <header>
         <a href="index.html">
-            <h1 id="logo">Harlech Castle</h1>
+            <h1 id="logo">Harlech ttCastle</h1>
         </a>
         <nav>
             <ul id="menu">
@@ -45,7 +45,7 @@
         </ul>
 
         <div id="tour">
-            <img src="/assets/images/Harlech-map-1.png" alt="Harlech tour guide">
+            <img src="/assets/images/Harlech-map-1.5.png" alt="Harlech tour guide">
         </div>
     </section>
 
