correct href css

--- a/history.html
+++ b/history.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Harlech Castle information and history">
     <meta name="keywords" content="Harlech Castle, castle, fun facts, history, gallery">
     <script src="https://kit.fontawesome.com/fb3ce16b7a.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
     <title>Harlech Castle</title>
 </head>
 
