error fix on gallery

--- a/gallery.html
+++ b/gallery.html
@@ -29,31 +29,31 @@
 </header>
 
 <div id="photos">
-        <img src="../assets/images/exterior-1.jpg" alt="Castle exterior, mountain view">
+        <img src="assets/images/exterior-1.jpg" alt="Castle exterior, mountain view">
         <div class="desc"> Castle rear, taken from hill bellow</div>
 
-        <img src="../assets/images/exterior-2.jpg" alt="Castle exterior, sunny day">
+        <img src="assets/images/exterior-2.jpg" alt="Castle exterior, sunny day">
         <div class="desc">Castle front, taken from mountain above </div>
 
-        <img src="../assets/images/exterior-3.jpg" alt="Castle exterior, sunny day, some clouds">
+        <img src="assets/images/exterior-3.jpg" alt="Castle exterior, sunny day, some clouds">
         <div class="desc">Castle front, taken from higher up mountain </div>
 
-        <img src="../assets/images/exterior-4.jpg" alt="Castle exterior, dull, overcast">
+        <img src="assets/images/exterior-4.jpg" alt="Castle exterior, dull, overcast">
         <div class="desc">Close up side view</div>
 
-        <img src="../assets/images/exterior-6.jpg" alt="Castle exterior, wide front view">
+        <img src="assets/images/exterior-6.jpg" alt="Castle exterior, wide front view">
         <div class="desc">Wide shot of castle front</div>
 
-        <img src="../assets/images/exterior-5.jpg" alt="Castle exterior, front entrance">
+        <img src="assets/images/exterior-5.jpg" alt="Castle exterior, front entrance">
         <div class="desc">Castle entrance</div>
 
-        <img src="/assets/images/interior-1.jpg" alt="interior arches">
+        <img src="assets/images/interior-1.jpg" alt="interior arches">
         <div class="desc">Castle enrtance archway</div>
 
-        <img src="../assets/images/interior-2.jpg" alt="interior overlooking courtyard">
+        <img src="assets/images/interior-2.jpg" alt="interior overlooking courtyard">
         <div class="desc">Overlooking the courtyard inside the castle</div>
 
-        <img src="../assets/images/interior-3.jpg" alt="interior looking at entrance">
+        <img src="assets/images/interior-3.jpg" alt="interior looking at entrance">
         <div class="desc">View from inside at front entrance</div>
 
     </div>
