add history section. move videos to be center, fix some css errors on images

--- a/history.html
+++ b/history.html
@@ -28,13 +28,17 @@
         </nav>
     </header>
    
-    <section >
+    <section id="history">
         <h2>The History Of Harlech Castle</h2>
-        <div id="history-left">left</div>
-        <div id="history-right">right</div>
-        <div id="history-center">center</div>
+        <div class="his">
+            <p>This documentary bellow (courtesy of Dafydd Humphreys) give an view of the castles history, architecture and a plethera of detailed information on the people who called Harlech Castle their home over the years</p>
+        </div>
     </section>
+
+    <iframe id="doc" width="662" height="362" src="https://www.youtube.com/embed/PqfFCddqMrM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     
+   
+
     <footer class="footer">
         <div class="footer-notes">
         <a href="https://www.facebook.com/HarlechCastle/" target="_blank"><i class="fab fa-facebook"></i></a>
