--- a/history.html
+++ b/history.html
@@ -37,7 +37,10 @@
 
     <iframe id="doc" width="662" height="362" src="https://www.youtube.com/embed/PqfFCddqMrM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     
-   
+   <section id="contact">
+       <h3>Contact us</h3>
+       <p>If you would like to know more please contact us on:<br>Phone:01766 780552<br>E-mail:HarlechCastle@gov.wales</p>
+   </section>
 
     <footer class="footer">
         <div class="footer-notes">
