--- a/index.html
+++ b/index.html
@@ -59,10 +59,9 @@
         
         Contact and Admission Information<br>
         Telephone:- +44 1766 780552<br>
-        Admission Charge:- Adults £6.00, Reduced rate £4.20.
+        Admission Charge:- Adults £6.00,
         Family Ticket:- £16.20 - admits 2 adults and up to 3 children under 16 years.
-        Children under 16 must be accompanied by an adult. Children under 5 free. No dogs allowed.
-        Three or seven day explorer passes are available to give you free admission to the historic sites in the care of Cadw.</p>
+        Children under 16 must be accompanied by an adult. Children under 5 free. No dogs allowed.<br>We kindly ask all explorers to be aware of others and give plenty of space to other paries.</p>
 
     </section>
 
