Minor tweak to readme

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </section>
     
     <section id="info">
-    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d9635.645506689869!2d-4.1089014!3d52.8599986!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xd57712cb9225529d!2sHarlech%20Castle!5e0!3m2!1ssv!2sse!4v1622486031522!5m2!1ssv!2sse" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d9635.645506689869!2d-4.1089014!3d52.8599986!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xd57712cb9225529d!2sHarlech%20Castle!5e0!3m2!1ssv!2sse!4v1622486031522!5m2!1ssv!2sse" width="600" height="450" style="border:0;" allowfullscreen=""></iframe>
     <p>Opening Hours<br>
     Normal Admissions:<br>
     1st March to 30th June - 09.30 - 17.00 daily<br>
