add new image-text over hero image

--- a/index.html
+++ b/index.html
@@ -29,7 +29,12 @@
     </header>
 
     <section id="hero-outer">
-        <div id="hero"></div> 
+        <div id="hero">
+            <p id="image-text">
+                Welcome To Harlech Castle!<br>
+                One Of North Wales Main Attractions
+            </p>
+        </div> 
     </section>
     
     <section id="info">
