check spelling for history section

--- a/gallery.html
+++ b/gallery.html
@@ -33,28 +33,41 @@
         <div class="desc"> Castle rear, taken from hill bellow</div>
 
         <img src="assets/images/exterior-2.jpg" alt="Castle exterior, sunny day">
-        <div class="desc">Castle front, taken from mountain above </div>
+        <div class="desc"> Castle front, taken from mountain above </div>
 
         <img src="assets/images/exterior-3.jpg" alt="Castle exterior, sunny day, some clouds">
-        <div class="desc">Castle front, taken from higher up mountain </div>
+        <div class="desc"> Castle front, taken from higher up mountain </div>
 
         <img src="assets/images/exterior-4.jpg" alt="Castle exterior, dull, overcast">
         <div class="desc">Close up side view</div>
 
         <img src="assets/images/exterior-6.jpg" alt="Castle exterior, wide front view">
-        <div class="desc">Wide shot of castle front</div>
+        <div class="desc"> Wide shot of castle front</div>
 
         <img src="assets/images/exterior-5.jpg" alt="Castle exterior, front entrance">
         <div class="desc">Castle entrance</div>
 
         <img src="assets/images/interior-1.jpg" alt="interior arches">
-        <div class="desc">Castle enrtance archway</div>
+        <div class="desc"> Castle enrtance archway</div>
 
         <img src="assets/images/interior-2.jpg" alt="interior overlooking courtyard">
-        <div class="desc">Overlooking the courtyard inside the castle</div>
+        <div class="desc"> Overlooking the courtyard inside the castle</div>
 
         <img src="assets/images/interior-3.jpg" alt="interior looking at entrance">
-        <div class="desc">View from inside at front entrance</div>
+        <div class="desc"> View from inside at front entrance</div>
+
+        <img src="assets/images/castle-dafodil.png" alt="Castle image from the side">
+        <div class="desc"> View of Castle in spring</div>
+
+        <img src="assets/images/castle-inside-drone.jpg" alt="Image of Castle interior taken by drone">
+        <div class="desc"> Image of Castle interior by drone</div>
+
+        <img src="assets/images/castle-walkway.jpg" alt="Image of entrance walkway">
+        <div class="desc"> Image of walkway leading to Castle entrance </div>
+
+        <img src="assets/images/harlech-overcast.jpg" alt="Harlech Castle during a storm">
+        <div class="desc"> Harlech Castle during a storm</div>
+
 
     </div>
 
