--- a/history.html
+++ b/history.html
@@ -31,16 +31,16 @@
     <section id="history">
         <h2>The History Of Harlech Castle</h2>
         <div class="his">
-            <p>Harlech Castle is an incredible castle, with its picturesque setting enhanced by being based 
+            <p>Harlech Castle is an incredible Castle, with its picturesque setting enhanced by being based 
                 on a rocky crag overlooking the sea with the Snowdonia Mountains in the background. <br>
-                Harlech Castle was one of a series of castles established in north Wales by Edward I after the 
+                Harlech Castle was one of a series of Castles established in north Wales by Edward I after the 
                 death of Llywelyn ap Gruffudd in 1282. <br> Building work began a year later in May 1283, 
                 and was raised in two main building phases. <br> In order to adapt to the restricted space of the rocky outcrop, 
-                the building is based on the concentric walls within walls. <br> The castle is designed in symmetrical fashion, 
+                the building is based on the concentric walls within walls. <br> The Castle is designed in symmetrical fashion, 
                 with four corner towers and an impressive gatehouse. <br> Originally, its unique position was chosen as it was 
-                eminently defensible and was built to take full advantage of its seaside location.<br> By 1289, the castle was largely completed.<br> 
-                The castle was strengthened in 1295 and again in 1323 and came to prominence during the Welsh rebellion led 
-                by Owain Glyn Dwr,<br> when in 1404 the castle became occupied by Glyn Dwr's court and family until 1409, the 
+                eminently defensible and was built to take full advantage of its seaside location.<br> By 1289, the Castle was largely completed.<br> 
+                The Castle was strengthened in 1295 and again in 1323 and came to prominence during the Welsh rebellion led 
+                by Owain Glyn Dwr,<br> when in 1404 the Castle became occupied by Glyn Dwr's court and family until 1409, the 
                 year it was retaken by the English.<br> There were to be another two sieges, the first being in the War of the 
                 Roses when it was taken by Yorkist forces in 1468.<br> It is argued that the famous song `Men of Harlech?<br> 
                 originated during the siege at Harlech during the War of the Roses in 1468.<br>The second during the Civil War 
@@ -48,7 +48,7 @@
                 after these sieges, fortunately however the order to demolish the castle were never carried out.<br>
                 Harlech Castle is perched on top of a high cliff, affording one of the<br> 
                 best views across the northern half of Cardigan Bay and large sections of Snowdonia on the landward side.<br>
-                According to Welsh mythology,<br> the ruins of the present castle were built on top of a fortress that once belonged 
+                According to Welsh mythology,<br> the ruins of the present Castle were built on top of a fortress that once belonged 
                 to the giant Bendigeidfran (the blessed Bran),<br> who lived here with his sister Branwen, after whom one of the towers 
                 is named.<br> However, archaeologists have found no evidence for a Welsh fortified structure predating Edward I's castle.<br>
                 Edward I commissioned the construction in 1283 as part of his great `Iron Ring?<br> of castles along the Welsh 
