add images to gallery seciton

--- a/gallery.html
+++ b/gallery.html
@@ -35,9 +35,6 @@
         <img src="assets/images/exterior-2.jpg" alt="Castle exterior, sunny day">
         <div class="desc"> Castle front, taken from mountain above </div>
 
-        <img src="assets/images/exterior-3.jpg" alt="Castle exterior, sunny day, some clouds">
-        <div class="desc"> Castle front, taken from higher up mountain </div>
-
         <img src="assets/images/exterior-4.jpg" alt="Castle exterior, dull, overcast">
         <div class="desc">Close up side view</div>
 
@@ -59,15 +56,23 @@
         <img src="assets/images/castle-dafodil.png" alt="Castle image from the side">
         <div class="desc"> View of Castle in spring</div>
 
-        <img src="assets/images/castle-inside-drone.jpg" alt="Image of Castle interior taken by drone">
-        <div class="desc"> Image of Castle interior by drone</div>
-
         <img src="assets/images/castle-walkway.jpg" alt="Image of entrance walkway">
         <div class="desc"> Image of walkway leading to Castle entrance </div>
+
+        <img src="assets/images/castle-inside-drone.jpg" alt="Image of Castle interior taken by drone">
+        <div class="desc"> Image of Castle interior by drone</div>
 
         <img src="assets/images/harlech-overcast.jpg" alt="Harlech Castle during a storm">
         <div class="desc"> Harlech Castle during a storm</div>
 
+        <img src="assets/images/castle-overview.jpg" alt="Castle from underneath">
+        <div class="desc"> Castle from bellow</div>
+
+        <img src="assets/images/Castle-winter.jpg" alt="Castle in the winter">
+        <div class="desc"> Harlech Castle during the winter</div>
+
+        <img src="assets/images/exterior-3.jpg" alt="Castle exterior, sunny day, some clouds">
+        <div class="desc"> Castle front, taken from higher up mountain </div>
 
     </div>
 
