--- a/fun-facts.html
+++ b/fun-facts.html
@@ -33,20 +33,26 @@
             <h2>Quickfire Facts!!</h2><br>
             <li>The Castle originally overlooked the sea</li>
             <li>The Castle is protected by four round towers aswell as a gatehouse</li>
-            <li>Harlech castle is surrounded by a clif on two sides, making assault very difficult</li>
+            <li>Harlech castle is surrounded by a cliff on two sides, making assault very difficult</li>
             <li>Harlech Castle's primary use was to help keep English control over Wales</li>
             <li>The Castle walls are around twelve metres in height</li>
             <li>The Castle once help up against a seige that lasted seven years during the 15th century</li>
             <li>The population or Harlech today is roughly 1,450</li>
             <li>Most people who live in Harlech come from a long family line of people who lived in harlech</li>
             <li>One of the more creepy facts of Harlech, It is home to a graveyard from the 1800s</li>
+            <li>Harlech is home to a variety of unique places, such as an old fashioned sweet shop that sells<br>
+            sweets from the olden days</li>
+            <li>One thing that may supprise visitors is how small the roads are</li>
+            <li>The roads in harlech used to be only used to horses and carts, the roads have not been widened<br>
+            so good luck drivers!</li>
+            <li>Harlech used to be home to the steepest hill on earth, it is called Pen Llech and it's at a gradient<br>
+            of 37.45%. It was recently knocked off the top spot by New Zealand's hill Baldwin Street with 38% gradient</li>
+            <li>Bellow this is a map of Harlech drawn in the 1800s</li>
 
         </ul>
-
-        <div id="tour">
-            <img src="assets/images/Harlech-map-1.5.png" alt="Harlech tour guide">
-        </div>
     </section>
+
+    <img class="map" src="assets/images/harlech-map.jpg" alt="Drawing of Harlech in the 1800s">
 
     <iframe id="video" width="640" height="360" src="https://www.youtube.com/embed/2ETNJXog9Fc" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <p class="source-v">This video is courtesy of Fly & Wild Camp North Wales </p>
