Add media queries for min screen size 351 px. Tidy text on fun facts section

--- a/fun-facts.html
+++ b/fun-facts.html
@@ -31,22 +31,22 @@
     <section>
         <ul id="facts">
             <h2>Quickfire Facts!!</h2><br>
-            <li>The Castle originally overlooked the sea</li>
-            <li>The Castle is protected by four round towers aswell as a gatehouse</li>
-            <li>Harlech castle is surrounded by a cliff on two sides, making assault very difficult</li>
-            <li>Harlech Castle's primary use was to help keep English control over Wales</li>
-            <li>The Castle walls are around twelve metres in height</li>
-            <li>The Castle once help up against a seige that lasted seven years during the 15th century</li>
-            <li>The population or Harlech today is roughly 1,450</li>
-            <li>Most people who live in Harlech come from a long family line of people who lived in harlech</li>
-            <li>One of the more creepy facts of Harlech, It is home to a graveyard from the 1800s</li>
+            <li>The Castle originally overlooked the sea</li><br>
+            <li>The Castle is protected by four round towers aswell as a gatehouse</li><br>
+            <li>Harlech castle is surrounded by a cliff on two sides, making assault very difficult</li><br>
+            <li>Harlech Castle's primary use was to help keep English control over Wales</li><br>
+            <li>The Castle walls are around twelve metres in height</li><br>
+            <li>The Castle once help up against a seige that lasted seven years during the 15th century</li><br>
+            <li>The population or Harlech today is roughly 1,450</li><br>
+            <li>Most people who live in Harlech come from a long family line of people who lived in harlech</li><br>
+            <li>One of the more creepy facts of Harlech, It is home to a graveyard from the 1800s</li><br>
             <li>Harlech is home to a variety of unique places, such as an old fashioned sweet shop that sells<br>
-            sweets from the olden days</li>
-            <li>One thing that may supprise visitors is how small the roads are</li>
+            sweets from the olden days</li><br>
+            <li>One thing that may supprise visitors is how small the roads are</li><br>
             <li>The roads in harlech used to be only used to horses and carts, the roads have not been widened<br>
-            so good luck drivers!</li>
+            so good luck drivers!</li><br>
             <li>Harlech used to be home to the steepest hill on earth, it is called Pen Llech and it's at a gradient<br>
-            of 37.45%. It was recently knocked off the top spot by New Zealand's hill Baldwin Street with 38% gradient</li>
+            of 37.45%. It was recently knocked off the top spot by New Zealand's hill Baldwin Street with 38% gradient</li><br>
             <li>Bellow this is a map of Harlech drawn in the 1800s</li>
 
         </ul>
