Change gallery images to better quality images. Add media queries for large screen size

--- a/gallery.html
+++ b/gallery.html
@@ -29,11 +29,11 @@
 </header>
 
 <div id="photos">
+
+
+
         <img src="assets/images/exterior-1.jpg" alt="Castle exterior, mountain view">
         <div class="desc"> Castle rear, taken from hill bellow</div>
-
-        <img src="assets/images/exterior-2.jpg" alt="Castle exterior, sunny day">
-        <div class="desc"> Castle front, taken from mountain above </div>
 
         <img src="assets/images/exterior-4.jpg" alt="Castle exterior, dull, overcast">
         <div class="desc">Close up side view</div>
@@ -50,11 +50,14 @@
         <img src="assets/images/interior-2.jpg" alt="interior overlooking courtyard">
         <div class="desc"> Overlooking the courtyard inside the castle</div>
 
-        <img src="assets/images/interior-3.jpg" alt="interior looking at entrance">
-        <div class="desc"> View from inside at front entrance</div>
-
         <img src="assets/images/castle-dafodil.png" alt="Castle image from the side">
         <div class="desc"> View of Castle in spring</div>
+
+        <img src="assets/images/exterior-2.jpg" alt="Castle exterior, sunny day">
+        <div class="desc"> Castle front, taken from mountain above </div>
+
+        <img src="assets/images/beach-view.jpg" alt="Castle view from the beach">
+        <div class="desc">Castle view from the beach bellow</div>
 
         <img src="assets/images/castle-walkway.jpg" alt="Image of entrance walkway">
         <div class="desc"> Image of walkway leading to Castle entrance </div>
@@ -68,11 +71,13 @@
         <img src="assets/images/castle-overview.jpg" alt="Castle from underneath">
         <div class="desc"> Castle from bellow</div>
 
+        <img src="assets/images/exterior-3.jpg" alt="Castle exterior, sunny day, some clouds">
+        <div class="desc"> Castle front, taken from higher up mountain </div>
+
         <img src="assets/images/Castle-winter.jpg" alt="Castle in the winter">
         <div class="desc"> Harlech Castle during the winter</div>
 
-        <img src="assets/images/exterior-3.jpg" alt="Castle exterior, sunny day, some clouds">
-        <div class="desc"> Castle front, taken from higher up mountain </div>
+
 
     </div>
 
